--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="css/main.css" />
     <script src="js/phaser.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/socket.io.min.js"></script>
+    <script>
+      var socket = io();
+    </script>
   </head>
   <body>
     <span style="display: block; height: 0; opacity: 0;">fix font bug</span>
